added match statistics to the databsae schema and different match events

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 spring:
-  datasoruce:
+  datasource:
     url: jdbc:postgresql://localhost:5432/derbycounty
     username: postgres
     password: Hhaarryy10
@@ -7,7 +7,7 @@ spring:
   # Hibernate ddl auto (create, create-drop, validate, update)
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
