updated match and fixture classes to fix issue with setting kickoff time and also make unique constraint on games where kickoff, hometeam, awayteam and competition must be unique before creating a fixture

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,7 @@ spring:
     url: jdbc:postgresql://localhost:5432/derbycounty
     username: postgres
     password: Hhaarryy10
+    driverClassName: org.postgresql.Driver
 
   # Hibernate ddl auto (create, create-drop, validate, update)
   jpa:
